# k4a_extract_data

./: .gitignore  CMakeLists.txt  README.md
include/: process_images.h  utils.h
src/: main.cpp  process_images.cpp  utils.cpp
